test/spec_vectors/br_if/fail/module_27.wat
(module (func $unbound-label (br_if 1 (i32.const 1))))